building up the nav adn clean up

--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -1,2 +1,21 @@
 // TBA
+$defaultFont: Avenir, Helvetica, Arial, sans-serif
+$rajdHani: Rajdhani, sans-serif
+$robotoMono: Roboto Mono, monospace
+
+$fontThin: 100
+$fontLight: 300
+$fontRegular: 500
+$fontBold: 700
+
+$babyPowder: #FDFFF7
+$blockBtnHover: #EDEDED
+$brightCerulean: #1B98E0
+$burntOrange: #FF5E5B
+$charcoal: #373F51
+$darkLiver: #50514F
+$maize: #FFED65
+$maximumBluePurple: #B4ADEA
+$mediumAquamarine: #59FFA0
+$richBlack: #001021
 $white: #FFF
